test/fail/type_for09.v3
//@seman
def m() {
	for (x: int in []) { }
}
